# paras-nft-farming-contract

./: .eslintrc  .gitignore  Cargo.toml  Makefile  README.md  _rust_setup.sh  package-lock.json  package.json
ref-farming/: Cargo.toml  build_docker.sh
ref-farming/neardev-bak/: dev-account  dev-account.env
ref-farming/src/: actions_of_farm.rs  actions_of_reward.rs  actions_of_seed.rs  errors.rs  event.rs  farm_seed.rs  farmer.rs  lib.rs  owner.rs  simple_farm.rs  token_receiver.rs  utils.rs  view.rs
ref-farming/tests/: test_compound.rs  test_failures.rs  test_locked_seed.rs  test_migrate.rs  test_multi_farms.rs  test_paras_farm.rs  test_seed_amount.rs  test_single_farm.rs  test_stake_unstake.rs  test_storage.rs  test_upgrade_lookupmap.rs
ref-farming/tests/common/: actions.rs  init.rs  utils.rs  views.rs
release/: ref_farming_release.wasm
res/: non_fungible_token.wasm  ref_exchange_release.wasm  ref_farming_101.wasm  ref_farming_local.wasm  ref_farming_release.wasm  test_nft.wasm
script/: all-old.json  all.json  roketo-mainnet.js
test/: config.js  farming-nft-test.js  locked-seed-test.js  test-utils.js
test-nft/: Cargo.toml  build.sh
test-nft/src/: lib.rs
