[package]
name = "ref-farming"
version = "1.0.1"
authors = ["Marco Sun <sun.dsk1@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uint = { version = "0.9.0", default-features = false }
near-sdk = "3.1.0"
near-contract-standards = "3.1.0"
serde = "1"
serde_json = "1"
serde_with = "1"

[dev-dependencies]
near-sdk-sim = "3.1.0"
test-token = { path = "../test-token" }
test-nft = { path = "../test-nft" }
